<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">File Manager</string>
    <string name="homepage_statement">This is the Homepage</string>
    <string name="app_description">A CyanogenMod file manager</string>
    <string name="size_bytes">B</string>
    <string name="size_kilobytes">KB</string>
    <string name="size_megabytes">MB</string>
    <string name="size_gigabytes">GB</string>
    <string name="datetime_format_order">%1$s %2$s</string>
    <string name="device_blockdevice">Block device</string>
    <string name="device_characterdevice">Character device</string>
    <string name="device_namedpipe">Named pipe</string>
    <string name="device_domainsocket">Domain socket</string>
    <string name="mount_point_readonly">RO</string>
    <string name="mount_point_readwrite">RW</string>
    <string name="ok" translatable="false">@android:string/ok</string>
    <string name="cancel" translatable="false">@android:string/cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="all">All</string>
    <string name="overwrite">Overwrite</string>
    <string name="select">Select</string>
    <string name="copy">Copy</string>
    <string name="move">Move</string>
    <string name="add">Add</string>
    <string name="dismiss">Dismiss</string>
    <string name="connect_now">Connect Now</string>
    <string name="root_directory_name"><![CDATA[<Root folder>]]></string>
    <string name="search_result_name">Search: <xliff:g id="terms">%1$s</xliff:g></string>
    <string name="loading_message">Loading\u2026</string>
    <string name="computing_message" translatable="false"><xliff:g id="data">%1$s</xliff:g></string>
    <string name="computing_message_ln" translatable="false"><xliff:g id="data">%1$s</xliff:g></string>
    <string name="cancelled_message">Cancelled.</string>
    <string name="error_message">Error.</string>
    <string name="copy_text_cd">Tap to copy text to clipboard</string>
    <string name="copy_text_msg">Text copied to clipboard</string>
    <string name="warning_title">Warning</string>
    <string name="error_title">Error</string>
    <string name="confirm_operation">Confirm operation</string>
    <string name="confirm_overwrite">Confirm overwrite</string>
    <string name="confirm_deletion">Confirm deletion</string>
    <string name="msgs_change_to_prompt_access_mode_title">Confirm switch</string>
    <string name="msgs_change_to_prompt_access_mode_msg">Unable to run in Root Access mode. Changing to Safe mode.\n\nApply this change?</string>
    <string name="msgs_cant_create_console">Unable to gain the required privileges to function.</string>
    <string name="msgs_privileged_console_alloc_failed">Unable to run in Root Access mode. Changing to Safe mode.</string>
    <string name="msgs_settings_save_failure">The setting could not be applied or stored.</string>
    <string name="msgs_settings_invalid_initial_directory">The initial folder \'<xliff:g id="initial_dir">%1$s</xliff:g>\' is invalid. Changing to root folder.</string>
    <string name="root_not_available_msg">Root is not available on this device. Cannot perform this operation.</string>
    <string name="msgs_success">The operation was completed successfully.</string>
    <string name="msgs_unknown">An error was detected. The operation was unsuccessful.</string>
    <string name="msgs_insufficient_permissions">This operation requires elevated permissions. Try changing to Root Access mode.</string>
    <string name="msgs_no_disk_space">This operation failed because there is no space left on the device.</string>
    <string name="msgs_file_not_found">The file or folder was not found.</string>
    <string name="msgs_command_not_found">The operation\'s command was not found or has an invalid definition.</string>
    <string name="msgs_io_failed">Read/write failure.</string>
    <string name="msgs_operation_timeout">The operation timed out.</string>
    <string name="msgs_operation_failure">The operation failed.</string>
    <string name="msgs_console_alloc_failure">An internal error occurred.</string>
    <string name="msgs_operation_can_not_be_cancelled">The operation cannot be cancelled.</string>
    <string name="msgs_read_only_filesystem">The file system is read-only. Try to mount the file system as read-write before attempting the operation.</string>
    <string name="msgs_illegal_argument">Illegal argument. Invocation failed.</string>
    <string name="msgs_unresolved_inconsistencies">The operation is not permitted because it would create inconsistencies.</string>
    <string name="msgs_operation_not_allowed_in_current_directory">Destination folder cannot be a subfolder of source or be the same as source.</string>
    <string name="msgs_push_again_to_exit">Press again to exit.</string>
    <string name="msgs_not_registered_app">There is no app registered to handle the type of file selected.</string>
    <string name="msgs_overwrite_files">Some of the files already exist in the destination folder.\n\nOverwrite?</string>
    <string name="msgs_action_association_failed">Associating the action to the app failed.</string>
    <string name="advise_insufficient_permissions">The operation requires elevated privileges.\n\nDo you want to change to Root Access mode?</string>
    <string name="parent_dir">Parent folder</string>
    <string name="external_storage">External storage</string>
    <string name="usb_storage">USB storage</string>
    <string name="actionbar_button_filesystem_cd">File system info</string>
    <string name="actionbar_button_sort_mode_cd">Sort mode</string>
    <string name="actionbar_button_layout_mode_cd">Layout mode</string>
    <string name="actionbar_button_other_view_options_cd">Other view options</string>
    <string name="actionbar_button_selection_done_cd">Done</string>
    <string name="actionbar_button_actions_cd">Actions</string>
    <string name="actionbar_button_search_cd">Search</string>
    <string name="actionbar_button_overflow_cd">More options</string>
    <string name="actionbar_button_storage_cd">Storage volumes</string>
    <string name="actionbar_button_save_cd">Save</string>
    <string name="actionbar_button_print_cd">Print</string>
    <string name="sort_options">Sort options</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_date">Date</string>
    <string name="sort_by_size">Size</string>
    <string name="sort_by_type">Type</string>
    <string name="sort_by_relevance">Relevance</string>
    <string name="sort_by_asc">Ascending</string>
    <string name="sort_by_desc">Descending</string>
    <string name="sort_by_name_asc">By name \u25B2</string>
    <string name="sort_by_name_desc">By name \u25BC</string>
    <string name="sort_by_date_asc">By date \u25B2</string>
    <string name="sort_by_date_desc">By date \u25BC</string>
    <string name="sort_by_size_asc">By size \u25B2</string>
    <string name="sort_by_size_desc">By size \u25BC</string>
    <string name="sort_by_type_asc">By type \u25B2</string>
    <string name="sort_by_type_desc">By type \u25BC</string>
    <string name="sort_by_relevance_asc">By relevance \u25B2</string>
    <string name="sort_by_relevance_desc">By relevance \u25BC</string>
    <string name="layout_icons">Icons</string>
    <string name="layout_simple">Simple</string>
    <string name="layout_details">Details</string>
    <string name="cm_filemanager_show_dirs_first">Show folders first</string>
    <string name="cm_filemanager_show_hidden">Show hidden files</string>
    <string name="cm_filemanager_show_system">Show system files</string>
    <string name="cm_filemanager_show_symlinks">Show symlinks</string>
    <string name="filesystem_info_warning_title">No information</string>
    <string name="filesystem_info_warning_msg">There is no information available for the file system.</string>
    <string name="filesystem_info_cant_be_mounted_msg">The file system cannot be mounted/unmounted.</string>
    <string name="filesystem_info_mount_not_allowed_msg">File system mounting operations are not allowed in Safe mode. Tap to change to Root Access mode.</string>
    <string name="filesystem_info_mount_failed_msg">File system mounting operation failed. Some file systems, like SD cards, cannot be mounted/unmounted because they are built-in as read-only file systems.</string>
    <string name="filesystem_info_dialog_title">File system information</string>
    <string name="filesystem_info_dialog_tab_info">Info</string>
    <string name="filesystem_info_dialog_tab_disk_usage">Disk usage</string>
    <string name="filesystem_info_dialog_status">Mounted:</string>
    <string name="filesystem_info_dialog_mount_point">Mount point:</string>
    <string name="filesystem_info_dialog_device">Device:</string>
    <string name="filesystem_info_dialog_type">Type:</string>
    <string name="filesystem_info_dialog_options">Options:</string>
    <string name="filesystem_info_dialog_dump_pass">Dump / Pass:</string>
    <string name="filesystem_info_dialog_virtual">Virtual:</string>
    <string name="filesystem_info_dialog_total_disk_usage">Total:</string>
    <string name="filesystem_info_dialog_used_disk_usage">Used:</string>
    <string name="filesystem_info_dialog_free_disk_usage">Free:</string>
    <string name="fso_properties_permissions_not_allowed_msg">Permissions operations are not allowed in Safe mode. Tap to change to Root Access mode.</string>
    <string name="navigation_item_title_home">Home</string>
    <string name="navigation_item_title_favorites">Favorites</string>
    <string name="navigation_item_title_local">Local storage</string>
    <string name="navigation_item_title_root">Root directory</string>
    <string name="navigation_item_title_protected">Protected storage</string>
    <string name="navigation_item_title_manage">Manage storage sources</string>
    <string name="navigation_item_title_settings">Settings</string>
    <string name="actions_menu_paste_selection">Copy to</string>
    <string name="actions_menu_move_selection">Move to</string>
    <string name="actions_menu_create_link">Create link</string>
    <string name="actions_menu_open">Open</string>
    <string name="actions_menu_open_with">Open with</string>
    <string name="actions_menu_execute">Execute</string>
    <string name="actions_menu_send">Share</string>
    <string name="actions_menu_compress">Compress</string>
    <string name="actions_menu_extract">Extract</string>
    <string name="actions_menu_delete">Delete</string>
    <string name="actions_menu_rename">Rename</string>
    <string name="actions_menu_create_copy">Create copy</string>
    <string name="actions_menu_add_shortcut">Add shortcut</string>
    <string name="actions_menu_open_parent_folder">Open parent</string>
    <string name="actions_menu_compute_checksum">Compute checksum</string>
    <string name="actions_menu_print">Print</string>
    <string name="actions_deselect_all">Clear selection</string>
    <string name="first_message">This app allows you to explore the file system and do operations
        that could break your device. To prevent damage, the app will start in a safe,low-privileged
        mode.
    </string>
    <string name="second_title">Placeholder Intro Title </string>
    <string name="second_message">
        \n\nYou can access the advanced, full-privileged mode via Settings. It\'s your
        responsibility to ensure that an operation doesn\'t break your system.
        \n\nThe CyanogenMod Team
    </string>
    <string name="add_cloud_storage">Add cloud storage</string>
    <string name="oobe_add_cloud_storage_desc">Important files are a tap away when you link cloud storage to your device.</string>
    <string name="welcome_to">Welcome to</string>
    <string name="file">File</string>
    <string name="manager">Manager</string>
    <string name="welcome_desc">Simple, powerful access to all your data from anywhere.</string>
</resources>