<?xml version="1.0" encoding="UTF-8"?>
<!--
 ** Copyright (C) 2015 The CyanogenMod Project
 **
 ** Licensed under the Apache License, Version 2.0 (the "License");
 ** you may not use this file except in compliance with the License.
 ** You may obtain a copy of the License at
 **
 **      http://www.apache.org/licenses/LICENSE-2.0
 **
 ** Unless required by applicable law or agreed to in writing, software
 ** distributed under the License is distributed on an "AS IS" BASIS,
 ** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ** See the License for the specific language governing permissions and
 ** limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Global Actions -->
    <group android:id="@+id/mnu_actions_global">
        <item
            android:id="@+id/mnu_actions_send"
            app:showAsAction="always"
            android:icon="@drawable/ic_object_share"
            android:title="@string/actions_menu_send"/>
        <item
            android:id="@+id/mnu_actions_paste"
            app:showAsAction="always"
            android:icon="@drawable/ic_object_copy"
            android:title="@string/actions_menu_paste_selection"/>
        <item
            android:id="@+id/mnu_actions_move"
            app:showAsAction="always"
            android:icon="@drawable/ic_object_move"
            android:title="@string/actions_menu_move_selection"/>
        <item
            android:id="@+id/mnu_actions_open"
            android:showAsAction="ifRoom"
            android:title="@string/actions_menu_open"/>
        <item
            android:id="@+id/mnu_actions_open_with"
            android:showAsAction="ifRoom"
            android:title="@string/actions_menu_open_with"/>
        <item
            android:id="@+id/mnu_actions_delete"
            android:showAsAction="ifRoom"
            android:title="@string/actions_menu_delete"/>
        <item
            android:id="@+id/mnu_actions_rename"
            android:showAsAction="ifRoom"
            android:title="@string/actions_menu_rename"/>
        <item
            android:id="@+id/mnu_actions_compress"
            android:showAsAction="ifRoom"
            android:title="@string/actions_menu_compress"/>
        <item
            android:id="@+id/mnu_actions_extract"
            android:showAsAction="ifRoom"
            android:title="@string/actions_menu_extract"/>
        <item
            android:id="@+id/mnu_actions_create_copy"
            android:showAsAction="ifRoom"
            android:title="@string/actions_menu_create_copy"/>
        <item
            android:id="@+id/mnu_actions_create_link"
            android:showAsAction="ifRoom"
            android:title="@string/actions_menu_create_link"/>
        <item
            android:id="@+id/mnu_actions_execute"
            android:showAsAction="ifRoom"
            android:title="@string/actions_menu_execute"/>
        <item
            android:id="@+id/mnu_actions_print"
            android:showAsAction="ifRoom"
            android:title="@string/actions_menu_print"/>
        <item
            android:id="@+id/mnu_actions_add_shortcut"
            android:showAsAction="ifRoom"
            android:title="@string/actions_menu_add_shortcut"/>
        <item
            android:id="@+id/mnu_actions_compute_checksum"
            android:showAsAction="ifRoom"
            android:title="@string/actions_menu_compute_checksum"/>
        <item
            android:id="@+id/mnu_actions_open_parent_folder"
            android:showAsAction="ifRoom"
            android:title="@string/actions_menu_open_parent_folder"/>
        <item
            android:id="@+id/mnu_actions_deselect_all"
            android:showAsAction="ifRoom"
            android:title="@string/actions_deselect_all" />
    </group>
</menu>