<?xml version="1.0" encoding="UTF-8"?>
<!--
 ** Copyright (C) 2012 The CyanogenMod Project
 **
 ** Licensed under the Apache License, Version 2.0 (the "License");
 ** you may not use this file except in compliance with the License.
 ** You may obtain a copy of the License at
 **
 **      http://www.apache.org/licenses/LICENSE-2.0
 **
 ** Unless required by applicable law or agreed to in writing, software
 ** distributed under the License is distributed on an "AS IS" BASIS,
 ** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 ** See the License for the specific language governing permissions and
 ** limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <group
        android:checkableBehavior="none"
        android:id="@+id/navigation_group_home">
        <item android:id="@+id/navigation_item_home"
            android:icon="@drawable/ic_home"
            android:title="@string/navigation_item_title_home" />
        <item android:id="@+id/navigation_item_favorites"
            android:icon="@drawable/ic_favorite_on"
            android:title="@string/navigation_item_title_favorites"
            android:visible="false" /> <!-- hidden until wired up -->
    </group>

    <group
        android:checkableBehavior="none"
        android:id="@+id/navigation_group_roots">
        <item android:id="@+id/navigation_item_internal"
            android:icon="@drawable/ic_source_internal"
            android:title="@string/navigation_item_title_local" />
        <item android:id="@+id/navigation_item_root_d"
            android:icon="@drawable/ic_source_root_d"
            android:title="@string/navigation_item_title_root"
            android:visible="false" />
        <item android:id="@+id/navigation_item_protected"
            android:icon="@drawable/ic_source_protected"
            android:title="@string/navigation_item_title_protected"
            android:orderInCategory="@integer/navigation_item_order_after_roots"
            android:visible="false" /> <!-- hidden until wired up -->
    </group>

    <group
        android:checkableBehavior="none"
        android:id="@+id/navigation_group_settings">
        <item android:id="@+id/navigation_item_manage"
            android:icon="@drawable/ic_storage_sources"
            android:title="@string/navigation_item_title_manage"
            android:orderInCategory="@integer/navigation_item_order_after_roots"/>
        <item android:id="@+id/navigation_item_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/navigation_item_title_settings"
            android:orderInCategory="@integer/navigation_item_order_after_roots" />
    </group>
</menu>
