<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2015 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/intro_pager"
        android:background="@drawable/bg_material_statusbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/default_primary"
            android:id="@+id/itemOne">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/fm_header_bg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_margin="24dp">

                <TextView
                    android:id="@+id/welcome_textview_0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_to"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/welcome_textview_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/file"
                    android:textSize="56sp"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/welcome_textview_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/manager"
                    android:textSize="56sp"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/welcome_textview_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_desc"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"/>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:id="@+id/itemTwo">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/second_title"
                android:id="@+id/titleMessageOne"
                android:textSize="28sp"
                android:textColor="@android:color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_message"
                android:id="@+id/bottomMessageOne"
                android:layout_alignParentBottom="true"
                android:paddingBottom="16dp"
                android:layout_marginBottom="@dimen/default_row_height"
                android:textSize="16sp"
                android:textColor="@android:color/white"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:id="@+id/itemThree">

            <TextView
                android:id="@+id/titleMessageTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/second_title"
                android:textSize="28sp"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/bottomMessageTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/second_message"
                android:layout_alignParentBottom="true"
                android:paddingBottom="16dp"
                android:layout_marginBottom="@dimen/default_row_height"
                android:textSize="16sp"
                android:textColor="@android:color/white"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/itemFour"
            android:background="@color/cloud_fill">

            <ImageView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/flying_folder"
                android:layout_above="@+id/clouds_intro"
                android:id="@+id/flying_folder"
                android:layout_marginBottom="78dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center|center_vertical|center_horizontal" />

            <!-- the cloud drawable has some weird spacing around it -->
            <ImageView android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cloud_line"
                android:layout_marginLeft="-50dp"
                android:layout_marginBottom="-13dp"
                android:layout_centerVertical="true"
                android:id="@+id/clouds_intro"
                android:layout_gravity="center|center_vertical|center_horizontal"/>

            <View
                android:id="@+id/generic_square"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/clouds_intro"
                android:background="@drawable/rectangle"/>

            <LinearLayout
                android:id="@+id/cloud_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_below="@+id/clouds_intro"
                android:layout_marginStart="24dp">

                    <TextView
                        android:text="@string/add_cloud_storage"
                        android:id="@+id/cardHeaderText"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:text="@string/oobe_add_cloud_storage_desc"
                        android:id="@+id/cardChildText"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />

            </LinearLayout>

            <Button
                android:text="@string/connect_now"
                android:id="@+id/dismiss_card"
                android:layout_width="120dp"
                android:layout_height="36dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="124dp"
                android:textColor="@android:color/white"
                android:background="@color/dark_button_blue"/>

        </RelativeLayout>

    </android.support.v4.view.ViewPager>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_height="@dimen/default_row_height"
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/prevButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_oobe_back"
            android:layout_alignParentLeft="true"
            android:textColor="@android:color/white"/>

        <com.cyanogenmod.filemanager.views.CirclePageIndicator
            android:id="@+id/pagination"
            android:layout_height="@dimen/half_row_height"
            android:layout_width="40dp"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal" android:layout_centerInParent="true"/>

        <ImageView
            android:id="@+id/nextButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_oobe_forward"
            android:layout_alignParentRight="true"
            android:textColor="@android:color/white"/>

    </RelativeLayout>

</RelativeLayout>
